added carousel pic

--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-  <div class="assignment"><a href="assignment.html">My<br>Assignment</a></div>
+  <a href="assignment.html">
+    <div class="assignment">My<br>Assignment</div>
+  </a>
   <nav>
-    <ul class="nav_container">
+    <ul class="nav_div">
       <li class="nav_logo"><a href="/index.html">GreenShell</a></li>
       <li class="nav_categories"><a href="#categories"><img src="asset\icon\categories.png" alt="">categories</a>
       </li>
@@ -30,30 +32,42 @@
     </ul>
   </nav>
 
-  <header>
-    <!-- 这里放置导航栏内容，例如品牌 logo、导航菜单等 -->
+  <header class="header_div">
+    <div class="header_left_box">
+      <div class="header_carousel">
+        <div class="header_carousel_box"><img src="asset\img\carousel\4.webp" alt=""></div>
+        <div class="header_carousel_box"><img src="asset\img\carousel\5.webp" alt=""></div>
+        <div class="header_carousel_box"><img src="asset\img\carousel\6.webp" alt=""></div>
+        <div class="header_carousel_left">&lt;</div>
+        <div class="header_carousel_right">&gt;</div>
+      </div>
+    </div>
+    <div class="header_right_box">
+      <div class="header_slogan">Go Green, Live Clean.</div>
+      <div class="header_join_btn">Join Now</div>
+    </div>
   </header>
 
-  <!-- 主要内容区 -->
+
   <main>
-    <!-- 特色产品区 -->
+
     <section>
-      <!-- 每个产品项可以是一个 article 或 div -->
+
       <article>
-        <!-- 在这里添加产品图片和描述 -->
+
       </article>
-      <!-- 重复上面的 article 为每个产品 -->
+
     </section>
 
-    <!-- 其他产品展示区，根据你的设计添加更多的 section 或 article -->
+
   </main>
 
-  <!-- 页脚 -->
+
   <footer>
-    <!-- 这里可以添加版权信息、联系方式等 -->
+
   </footer>
 
-  <!-- 在这里添加 JavaScript 文件或脚本 -->
+  <script src="script.js"></script>
 </body>
 
 </html>
