--- a/feedback.html
+++ b/feedback.html
@@ -40,7 +40,7 @@
         </tr>
         <tr>
           <td class="buttonsLine">
-            <input type="reset" value="Clear"><input type="submit" value="Submit">
+            <input type="reset" id="clear" value="Clear"><input type="submit" value="Submit">
           </td>
         </tr>
   </section>
