implement carousel function

--- a/index.html
+++ b/index.html
@@ -35,11 +35,23 @@
   <header class="header_div">
     <div class="header_left_box">
       <div class="header_carousel">
-        <div class="header_carousel_box"><img src="asset\img\carousel\4.webp" alt=""></div>
-        <div class="header_carousel_box"><img src="asset\img\carousel\5.webp" alt=""></div>
-        <div class="header_carousel_box"><img src="asset\img\carousel\6.webp" alt=""></div>
-        <div class="header_carousel_left">&lt;</div>
-        <div class="header_carousel_right">&gt;</div>
+        <div class="carousel_box"><img src="asset\img\carousel\7.png" alt=""></div>
+        <div class="carousel_box"><img src="asset\img\carousel\4.png" alt=""></div>
+        <div class="carousel_box"><img src="asset\img\carousel\5.png" alt=""></div>
+        <div class="carousel_box"><img src="asset\img\carousel\6.png" alt=""></div>
+
+        <div class="carousel_left">&lt;</div>
+        <div class="carousel_right">&gt;</div>
+        <div class="carousel_point">
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
       </div>
     </div>
     <div class="header_right_box">
