--- a/sourcelog.html
+++ b/sourcelog.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <h1 class="biggerTitle">Sources Log</h1>
-  <table border="1" class="setMiddle">
+  <h1 class="bigger_title">Sources Log</h1>
+  <table border="1" class="set_middle">
     <tr>
       <th>Original</th>
       <th>Type</th>
