--- a/feedback.html
+++ b/feedback.html
@@ -9,10 +9,32 @@
 </head>
 
 <body>
-  <section id="feedback">
-    <h1 class="biggerTitle">Feedback Form</h1>
+  <a href="assignment.html">
+    <div class="assignment">My<br>Assignment</div>
+  </a>
+  <nav>
+    <ul class="nav_div">
+      <li class="nav_logo"><a href="/index.html">GreenShell</a></li>
+      <li class="nav_categories"><a href="#categories"><img src="asset\icon\categories.png" alt="">categories</a>
+      </li>
+      <li class="nav_search">
+        <form class="nav_search" action="https://www.google.com/search" method="GET" target="_blank">
+          <div class="search_box">
+            <input type="text" name="q" placeholder="Search" required>
+            <button type="submit" class="search_btn"></button>
+          </div>
+        </form>
+      </li>
+      <li class="nav_sign_in"><a href="#sign_in">Sign in</a></li>
+      <li class="nav_language"><a href="#language"><img src="asset\icon\AU.png" alt=""></a></li>
+      <li class="nav_liked"><a href="#liked"><img src="asset\icon\liked.png" alt=""></a></li>
+      <li class="nav_cart"><a href="#cart"><img src="asset\icon\cart.png" alt=""></a></li>
+    </ul>
+  </nav>
+  <section class="feedback" id="feedback">
+    <h1 class="bigger_title">Feedback Form</h1>
     <form>
-      <table class="setMiddle feedbackTable">
+      <table class="set_middle feedback_table">
         <tr>
           <td><label for="name">Your name</label><br>
             <input type="text" name="name" id="name" maxlength="6">
