Update main section styling

--- a/assignment.html
+++ b/assignment.html
@@ -839,7 +839,7 @@
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"
       data-immersive-translate-paragraph="1">Website Topic</b></h1>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    <a href="index.html">GreenShell(Eco-Friendly Shopping Website)</a>
+    <a href="index.html">GreenShell (Eco-Friendly Shopping Website)</a>
   </p>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">Note:
     You will not be able to change this topic in the future.</p>
@@ -853,7 +853,7 @@
       Introduce Your Topic/Passion</b></h2>
   <a href="passion.html">passion.html</a>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Notes: Provide any notes you may have about this element here.</p>
+  </p>
   <h2 data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><b
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">1.2
       CSS</b></h2>
@@ -861,14 +861,16 @@
     <a href="style.css">style.css</a>
   </p>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Notes: Provide any notes you may have about this element here.</p>
+  </p>
   <h2 data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><b
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">1.3
       Site Map</b></h2>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Replace this line with your URL link to this element in your website.</p>
+    <a href="sitemap.html">sitemap.html</a>
+  </p>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Notes: Provide any notes you may have about this element here.</p>
+    </a>
+  </p>
   <h2 data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><b
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">1.4
       Source Log</b></h2>
@@ -876,7 +878,7 @@
     <a href="sourcelog.html">sourcelog.html</a>
   </p>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Notes: Provide any notes you may have about this element here.</p>
+  </p>
   <h2 data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><b
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">1.5
       Feedback Form</b></h2>
@@ -884,15 +886,15 @@
     <a href="feedback.html">feedback.html</a>
   </p>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Notes: Provide any notes you may have about this element here.</p>
+    Notes: Link to email application.</p>
   <h2 data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><b
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">1.6
       This Assessment Page</b></h2>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    <a href="index.html">Assessment Page(?)</a>
+    <a href="assignment.html">assignment.html</a>
   </p>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Notes: Provide any notes you may have about this element here.</p>
+    Notes: Point to the assignment page.</p>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><br
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"></p>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><br
