--- a/sitemap.html
+++ b/sitemap.html
@@ -5,14 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <title>Site map</title>
+  <title>Site Map</title>
 </head>
-<a href="assignment.html">
+<a href="assignment.html" target="_blank">
   <div class="assignment">My<br>Assignment</div>
 </a>
 <nav>
   <ul class="nav_div">
-    <li class="nav_logo"><a href="/index.html">GreenShell</a></li>
+    <li class="nav_logo"><a href="index.html">GreenShell</a></li>
     <li class="nav_categories"><a href="#categories"><img src="asset\icon\categories.png" alt="">categories</a>
     </li>
     <li class="nav_search">
@@ -29,3 +29,12 @@
     <li class="nav_cart"><a href="#cart"><img src="asset\icon\cart.png" alt=""></a></li>
   </ul>
 </nav>
+<section id="sitemap" class="main_title">
+  <h1 class="bigger_title">Site Map</h1>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="passion.html">My Passion</a></li>
+    <li><a href="sourcelog.html">Sources Log</a></li>
+    <li><a href="feedback.html">Feedback</a></li>
+    <li><a href="sitemap.html">Site Map</a></li>
+</section>
