--- a/sourcelog.html
+++ b/sourcelog.html
@@ -9,42 +9,78 @@
 </head>
 
 <body>
-  <h1 class="bigger_title">Sources Log</h1>
-  <table border="1" class="set_middle">
-    <tr>
-      <th>Original</th>
-      <th>Type</th>
-      <th>How Altered or Justification</th>
-    </tr>
-    <tr>
-      <td><a
-          href="https://www.flaticon.com/free-icon/love_2961957?term=heart&page=1&position=15&origin=search&related_id=2961957">liked.png</a>
-      </td>
-      <td>Graphic</td>
-      <td>Resized picture to make it smaller.</td>
-    </tr>
-    <tr>
-      <td><a
-          href="https://www.flaticon.com/free-icon/shopping-cart_1170678?term=cart&page=1&position=4&origin=search&related_id=1170678">cart.png</a>
-      </td>
-      <td>Graphic</td>
-      <td>Resized picture to make it smaller.</td>
-    </tr>
-    <tr>
-      <td><a
-          href="https://www.flaticon.com/free-icon/menu_3693669?term=categories&page=1&position=68&origin=search&related_id=3693669">categories.png</a>
-      </td>
-      <td>Graphic</td>
-      <td>Resized picture to make it smaller.</td>
-    </tr>
-    <tr>
-      <td><a
-          href="https://www.flaticon.com/free-icon/australia_323367?term=australia&page=1&position=1&origin=search&related_id=323367">AU.png</a>
-      </td>
-      <td>Graphic</td>
-      <td>Resized picture to make it smaller.</td>
-    </tr>
-  </table>
+  <a href="assignment.html" target="_blank">
+    <div class="assignment">My<br>Assignment</div>
+  </a>
+  <nav>
+    <ul class="nav_div">
+      <li class="nav_logo"><a href="index.html">GreenShell</a></li>
+      <li class="nav_categories"><a href="#categories"><img src="asset\icon\categories.png" alt="">categories</a>
+      </li>
+      <li class="nav_search">
+        <form class="nav_search" action="https://www.google.com/search" method="GET" target="_blank">
+          <div class="search_box">
+            <input type="text" name="q" placeholder="Search" required>
+            <button type="submit" class="search_btn"></button>
+          </div>
+        </form>
+      </li>
+      <li class="nav_sign_in"><a href="#sign_in">Sign in</a></li>
+      <li class="nav_language"><a href="#language"><img src="asset\icon\AU.png" alt=""></a></li>
+      <li class="nav_liked"><a href="#liked"><img src="asset\icon\liked.png" alt=""></a></li>
+      <li class="nav_cart"><a href="#cart"><img src="asset\icon\cart.png" alt=""></a></li>
+    </ul>
+  </nav>
+  <div class="main_title" id="source_log">
+    <h1 class="bigger_title">Sources Log</h1>
+    <table border="1" class="set_middle">
+      <tr>
+        <th>Original</th>
+        <th>Type</th>
+        <th>How Altered or Justification</th>
+      </tr>
+      <tr>
+        <td><a
+            href="https://www.flaticon.com/free-icon/love_2961957?term=heart&page=1&position=15&origin=search&related_id=2961957">liked.png</a>
+        </td>
+        <td>Icon</td>
+        <td>Resized picture to make it smaller.</td>
+      </tr>
+      <tr>
+        <td><a
+            href="https://www.flaticon.com/free-icon/shopping-cart_1170678?term=cart&page=1&position=4&origin=search&related_id=1170678">cart.png</a>
+        </td>
+        <td>Icon</td>
+        <td>Resized picture to make it smaller.</td>
+      </tr>
+      <tr>
+        <td><a
+            href="https://www.flaticon.com/free-icon/menu_3693669?term=categories&page=1&position=68&origin=search&related_id=3693669">categories.png</a>
+        </td>
+        <td>Icon</td>
+        <td>Resized picture to make it smaller.</td>
+      </tr>
+      <tr>
+        <td><a
+            href="https://www.flaticon.com/free-icon/australia_323367?term=australia&page=1&position=1&origin=search&related_id=323367">AU.png</a>
+        </td>
+        <td>Icon</td>
+        <td>Resized picture to make it smaller.</td>
+      </tr>
+      <tr>
+        <td>./carousel/4.png
+        </td>
+        <td>Graphic</td>
+        <td>AI generated.</td>
+      </tr>
+      <tr>
+        <td>./carousel/5.png
+        </td>
+        <td>Graphic</td>
+        <td>AI generated.</td>
+      </tr>
+    </table>
+  </div>
 </body>
 
 </html>
