--- a/assignment.html
+++ b/assignment.html
@@ -997,8 +997,7 @@
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"
       data-immersive-translate-paragraph="1">Continuous Improvement Session</b></h2>
   <p data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08" data-immersive-translate-paragraph="1">
-    Replace this line with the CI activity you did or, if you attended the in-lab continuous improvement session, please
-    give the date you attended the continuous improvement session.</p>
+    Continuous Improvement Opportunity #2: ANU Digital Master Plan</p>
   <h2 data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"><b
       data-immersive-translate-walked="362ad46c-352d-49e9-8d1e-6ff792e8fd08"
       data-immersive-translate-paragraph="1">Report</b></h2>
