--- a/index.html
+++ b/index.html
@@ -65,14 +65,105 @@
   </header>
 
 
-  <main>
+  <main class="main_div">
 
     <section>
-      <div>
-        <h2>Best Sell</h2>
+      <div class="main_div_title">
+        <h2>&nbsp;&nbsp;Best Sell&nbsp;&nbsp;</h2>
       </div>
+      <div class="bs_div">
+        <div>
+          <a href="#link"><img src="asset/img/bestsell/1.png" alt=""> </a>
+          <p class="bs_title"><a href="#link">Recycled Glass Bottle</a></p>
+          <p class="bs_price"><a href="#link">$17.10</a></p>
 
+        </div>
+        <div>
+          <a href="#link"><img src="asset/img/bestsell/4.png" alt=""></a>
+          <p class="bs_title"><a href="#link">Reusable shopping bags</a></p>
+          <p class="bs_price"><a href="#link">$67.80</a></p>
 
+        </div>
+      </div>
+      <div class="main_div_title">
+        <h2>&nbsp;&nbsp;Categories&nbsp;&nbsp;</h2>
+      </div>
+      <div class="categories_div">
+        <div>
+          <a href="#clothes"><img src="asset/img/categories/clothes.png" alt=""></a>
+          <a href="#clothes">
+            <p>Clothes</p>
+          </a>
+        </div>
+        <div>
+          <a href="#personal-care"><img src="asset/img/categories/personal care.png" alt=""></a>
+          <a href="#personal-care">
+            <p>Personal Care</p>
+          </a>
+        </div>
+        <div>
+          <a href="#household"><img src="asset/img/categories/household.png" alt=""></a>
+          <a href="#household">
+            <p>Household</p>
+          </a>
+        </div>
+        <div>
+          <a href="#kitchen"><img src="asset/img/categories/kitchen.png" alt=""></a>
+          <a href="#kitchen">
+            <p>Kitchen</p>
+          </a>
+        </div>
+        <div>
+          <a href="#office"><img src="asset/img/categories/office.png" alt=""></a>
+          <a href="#office">
+            <p>Office</p>
+          </a>
+        </div>
+        <div>
+          <a href="#pets"><img src="asset/img/categories/pets.png" alt=""></a>
+          <a href="#pets">
+            <p>Pets</p>
+          </a>
+        </div>
+      </div>
+      <div class="main_div_title">
+        <h2>&nbsp;&nbsp;Discover More&nbsp;&nbsp;</h2>
+      </div>
+      <div class="dm_div">
+        <a href="#link"><img src="asset/img/discovermore/1.png" alt=""></a>
+        <a href="#link"><img src="asset/img/discovermore/2.png" alt=""></a>
+        <a href="#link"><img src="asset/img/discovermore/4.png" alt=""></a>
+        <a href="#link"><img src="asset/img/discovermore/3.png" alt=""></a>
+        <a href="#link"><img src="asset/img/discovermore/5.png" alt=""></a>
+        <a href="#link"><img src="asset/img/discovermore/6.png" alt=""></a>
+      </div>
+      <div class="materials_title">
+        <h3>&nbsp;&nbsp;For each product, we promise we ONLY use&nbsp;&nbsp;</h3>
+      </div>
+      <div class="materials_container">
+        <div class="materials_div">
+          <a href="#link"><img src="asset/img/materials/bamboo.png" alt="bamboo"
+              title="Bamboo: Fast-growing and sustainable, it is used for a wide range of purposes, such as making furniture and flooring."></a>
+          <a href="#link"><img src="asset/img/materials/cork.png" alt="cork"
+              title="Cork: made from the bark of the cork oak tree, renewable, waterproof and non-slip, commonly used for flooring and wall panels."></a>
+          <a href="#link"><img src="asset/img/materials/cotton.png" alt="cotton"
+              title="Organic cotton: no pesticides and fertilizers, eco-friendly, used to make clothing, bedding and other textiles."></a>
+          <a href="#link"><img src="asset/img/materials/corn plastic.png" alt="corn plastic"
+              title="Corn plastic: made from corn starch, biodegradable, commonly used in the production of disposable tableware, packaging and so on."></a>
+          <a href="#link"><img src="asset/img/materials/coconut fiber.png" alt="coconut fiber"
+              title="Coconut fiber: taken from the coconut shell, can be used to make carpets, ropes, brushes and so on."></a>
+          <a href="#link"><img src="asset/img/materials/bamboo.png" alt="bamboo"
+              title="Bamboo: Fast-growing and sustainable, it is used for a wide range of purposes, such as making furniture and flooring."></a>
+          <a href="#link"><img src="asset/img/materials/cork.png" alt="cork"
+              title="Cork: made from the bark of the cork oak tree, renewable, waterproof and non-slip, commonly used for flooring and wall panels."></a>
+          <a href="#link"><img src="asset/img/materials/cotton.png" alt="cotton"
+              title="Organic cotton: no pesticides and fertilizers, eco-friendly, used to make clothing, bedding and other textiles."></a>
+          <a href="#link"><img src="asset/img/materials/corn plastic.png" alt="corn plastic"
+              title="Corn plastic: made from corn starch, biodegradable, commonly used in the production of disposable tableware, packaging and so on."></a>
+          <a href="#link"><img src="asset/img/materials/coconut fiber.png" alt="coconut fiber"
+              title="Coconut fiber: taken from the coconut shell, can be used to make carpets, ropes, brushes and so on."></a>
+        </div>
+      </div>
     </section>
 
 
@@ -106,12 +197,11 @@
     <p>&copy; 2024 GreenShell. All rights reserved.</p>
   </footer>
 
-  <!-- 登录模态窗口 -->
+
   <div id="loginModal" class="modal">
-    <!-- 模态内容 -->
+
     <div class="modal_content">
 
-      <!-- 登录表单 -->
       <div class="login_image"><img src="asset\img\login.webp" alt=""></div>
       <div class="login_info">
         <form id="loginForm">
